--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+    "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "tabWidth": 4
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
