--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,8 @@
     "core-js": "^3.14.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
+    "vue-next-select": "^2.6.0",
     "vue-router": "^4.0.0-0",
-    "vue-select": "^3.11.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^7.28.0",
     "eslint-plugin-vue": "^7.11.0",
-    "typescript": "~4.3.2"
+    "typescript": "~4.3.2",
+    "vue-next-select":"^2.6.0"
   }
 }
