--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vue-axios": "^3.2.4",
     "vue-next-select": "^2.6.0",
     "vue-router": "^4.0.0-0",
+    "vue3-select2-component": "^0.1.7",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -35,6 +36,6 @@
     "eslint": "^7.28.0",
     "eslint-plugin-vue": "^7.11.0",
     "typescript": "~4.3.2",
-    "vue-next-select":"^2.6.0"
+    "vue-next-select": "^2.6.0"
   }
 }
