--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "vue-next-select": "^2.6.0",
     "vue-router": "^4.0.0-0",
     "vue3-select2-component": "^0.1.7",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.1",
