index.ts upodate

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/vue-router": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.14.0",
+    "es6-promise": "^4.2.8",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
     "vue-next-select": "^2.6.0",
