リロード時ログインの永続化

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,19 @@
     "tabWidth": 4
   },
   "dependencies": {
+    "@types/js-cookie": "^2.2.7",
     "@types/vue-router": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.14.0",
     "es6-promise": "^4.2.8",
+    "js-cookie": "^3.0.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
     "vue-next-select": "^2.6.0",
     "vue-router": "^4.0.0-0",
     "vue3-select2-component": "^0.1.7",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.1",
