--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@vue/cli-plugin-babel": "~4.5.13",
