--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "vue-next-select": "^2.6.0",
     "vue-router": "^4.0.0-0",
     "vue3-select2-component": "^0.1.7",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.0.0"
   },
