Search function Separation of Japanese and English

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "vue-axios": "^3.2.4",
     "vue-next-select": "^2.6.0",
     "vue-router": "^4.0.0-0",
+    "vue-select-3": "^1.0.1",
     "vue3-select2-component": "^0.1.7",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2",
