--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,16 @@
     "tabWidth": 4
   },
   "dependencies": {
-    "@types/js-cookie": "^2.2.7",
+    "@types/js-cookie": "^3.0.1",
     "@types/vue-router": "^2.0.0",
-    "axios": "^0.21.2",
-    "core-js": "^3.14.0",
+    "axios": "^0.26.1",
+    "core-js": "^3.21.1",
     "es6-promise": "^4.2.8",
-    "js-cookie": "^3.0.0",
-    "vue": "^3.0.0",
-    "vue-axios": "^3.2.4",
-    "vue-next-select": "^2.6.0",
-    "vue-router": "^4.0.0-0",
+    "js-cookie": "^3.0.1",
+    "vue": "^3.2.31",
+    "vue-axios": "^3.4.1",
+    "vue-next-select": "^2.10.2",
+    "vue-router": "^4.0.14",
     "vue-select-3": "^1.0.1",
     "vue3-select2-component": "^0.1.7",
     "vuedraggable": "^4.1.0",
@@ -31,19 +31,19 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
-    "@vue/cli-plugin-typescript": "~4.5.13",
-    "@vue/cli-plugin-vuex": "~4.5.13",
-    "@vue/cli-service": "^4.5.13",
-    "@vue/compiler-sfc": "^3.1.1",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^7.28.0",
-    "eslint-plugin-vue": "^7.11.0",
-    "typescript": "~4.3.2",
-    "vue-next-select": "^2.6.0"
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "@vue/cli-plugin-babel": "~5.0.3",
+    "@vue/cli-plugin-eslint": "^5.0.3",
+    "@vue/cli-plugin-router": "~5.0.3",
+    "@vue/cli-plugin-typescript": "~5.0.3",
+    "@vue/cli-plugin-vuex": "~5.0.3",
+    "@vue/cli-service": "^5.0.3",
+    "@vue/compiler-sfc": "^3.2.31",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "typescript": "~4.6.2",
+    "vue-next-select": "^2.10.2"
   }
 }
