--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.1",
+    "eslint-config-prettier": "^8.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.2"
   },
   "prettier": {
