--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,7 +12,6 @@
     "@types/react-dom": "^18.0.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.1",
-    "eslint-config-prettier": "^8.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
@@ -44,14 +43,25 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint-plugin-react": "^7.29.4",
-    "prettier": "^2.6.2"
-  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "all"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.6.2"
   }
 }
